@@ -6,6 +6,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+	<modules>
+		<module>wms-common-parent</module>
+		<module>wms-service-parent</module>
+		<module>wms-web-parent</module>
+		<module>wms-facade-parent</module>
+	</modules>
+
 	<distributionManagement>
 		<!-- release版本 -->
 		<repository>
@@ -26,6 +33,15 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+		<!--子工程版本声明 start -->
+		<wms-common-config.version>0.0.1-SNAPSHOT</wms-common-config.version>
+		<wms-common-core.version>0.0.1-SNAPSHOT</wms-common-core.version>
+		<wms-common-web.version>0.0.1-SNAPSHOT</wms-common-web.version>
+		<wms-common.version>0.0.1-SNAPSHOT</wms-common.version>
+	
+		<wms-facade-user.version>0.0.1-SNAPSHOT</wms-facade-user.version>
+
+		<!--子工程版本声明 end -->
 
 		<slf4j.version>1.7.6</slf4j.version>
 		<logback.version>1.1.7</logback.version>
@@ -46,6 +62,7 @@
 		<mysql.version>5.1.21</mysql.version>
 		<bonecp.version>0.8.0.RELEASE</bonecp.version>
 
+		<druid.version>1.0.28</druid.version>
 		<mybatis.version>3.2.6</mybatis.version>
 		<mybatis-ehcache.version>1.0.2</mybatis-ehcache.version>
 		<mybatis-spring.version>1.2.0</mybatis-spring.version>
@@ -53,8 +70,6 @@
 		<jedis.version>2.7.2</jedis.version>
 
 		<spring.version>4.2.7.RELEASE</spring.version>
-		<spring-boot.version>1.3.5.RELEASE</spring-boot.version>
-		<springfox-swagger2.version>2.5.0</springfox-swagger2.version>
 		<javax.websocket.version>1.0</javax.websocket.version>
 
 		<shiro.version>1.2.2</shiro.version>
@@ -68,24 +83,48 @@
 		<hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
 
 		<mybatis-plugin-page.version>1.0.4</mybatis-plugin-page.version>
+		<mybatis-plugin-rw.version>1.0.1</mybatis-plugin-rw.version>
 
 		<dubbo.version>2.8.4</dubbo.version>
-		<javassist.version>3.20.0-GA</javassist.version>
+		<javassist.version>3.3.GA</javassist.version>
 		<netty.version>3.2.10.Final</netty.version>
 		<zkclient.version>0.4</zkclient.version>
 		<zookeeper.version>3.3.4</zookeeper.version>
-
-		<wms-common-config.version>0.0.1-SNAPSHOT</wms-common-config.version>
-		<wms-common-core.version>0.0.1-SNAPSHOT</wms-common-core.version>
-		<wms-common-web.version>0.0.1-SNAPSHOT</wms-common-web.version>
-		<wms-common.version>0.0.1-SNAPSHOT</wms-common.version>
-
-		<wms-facade-sso.version>0.0.1-SNAPSHOT</wms-facade-sso.version>
+		<swagger.version>0.9.5</swagger.version>
+		<jackson-asl.version>1.9.13</jackson-asl.version>
+		<fastjson.version>1.2.21</fastjson.version>
 	</properties>
 
 	<!-- 声明依赖,统一版本 -->
 	<dependencyManagement>
 		<dependencies>
+
+			<!-- common层 -->
+			<dependency>
+				<groupId>com.coe.fcs</groupId>
+				<artifactId>fcs-common-config</artifactId>
+				<version>${fcs-common-config.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.coe.fcs</groupId>
+				<artifactId>fcs-common-core</artifactId>
+				<version>${fcs-common-core.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.coe.fcs</groupId>
+				<artifactId>fcs-common</artifactId>
+				<version>${fcs-common.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.coe.fcs</groupId>
+				<artifactId>fcs-common-web</artifactId>
+				<version>${fcs-common-web.version}</version>
+			</dependency>
+			<!-- common层end -->
+
 			<!-- 单元测试 start -->
 			<dependency>
 				<groupId>junit</groupId>
@@ -371,6 +410,33 @@
 				<version>${httpclient.version}</version>
 			</dependency>
 
+			<!--datasource connection pool [druid] -->
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>druid</artifactId>
+				<version>${druid.version}</version>
+			</dependency>
+
+			<!-- mybatis start -->
+			<dependency>
+				<groupId>org.mybatis</groupId>
+				<artifactId>mybatis</artifactId>
+				<version>${mybatis.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.mybatis</groupId>
+				<artifactId>mybatis-spring</artifactId>
+				<version>${mybatis-spring.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.mybatis.caches</groupId>
+				<artifactId>mybatis-ehcache</artifactId>
+				<version>${mybatis-ehcache.version}</version>
+			</dependency>
+			<!-- mybatis end -->
+
 			<!-- 分页插件 -->
 			<dependency>
 				<groupId>mybatis.plugin.page</groupId>
@@ -378,19 +444,26 @@
 				<version>${mybatis-plugin-page.version}</version>
 			</dependency>
 
-			<!-- springfox start -->
+			<!-- 读写分离插件 -->
 			<dependency>
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-swagger2</artifactId>
-				<version>${springfox-swagger2.version}</version>
+				<groupId>mybatis.plugin.rw</groupId>
+				<artifactId>mybatis-plugin-rw</artifactId>
+				<version>${mybatis-plugin-rw.version}</version>
 			</dependency>
 
+			<!-- mysql驱动 -->
 			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-web</artifactId>
-				<version>${spring-boot.version}</version>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>${mysql.version}</version>
 			</dependency>
-			<!-- springfox end -->
+
+			<!-- 开源的分析、编辑和创建Java字节码的类库 -->
+			<dependency>
+				<groupId>javassist</groupId>
+				<artifactId>javassist</artifactId>
+				<version>${javassist.version}</version>
+			</dependency>
 
 			<!-- dubbo dependency start -->
 			<dependency>
@@ -429,27 +502,117 @@
 				<version>${zookeeper.version}</version>
 				<exclusions>
 					<exclusion>
-						<groupId>log4j</groupId>
 						<artifactId>log4j</artifactId>
+						<groupId>log4j</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>org.slf4j</artifactId>
+						<groupId>slf4j-api</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>org.slf4j</artifactId>
+						<groupId>slf4j-log4j12</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>netty</artifactId>
+						<groupId>org.jboss.netty</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>slf4j-log4j12</artifactId>
+						<groupId>org.slf4j</groupId>
 					</exclusion>
 				</exclusions>
 			</dependency>
 			<!-- dubbo dependency end -->
+			<!-- swagger dependency start -->
+			<dependency>
+				<groupId>com.mangofactory</groupId>
+				<artifactId>swagger-springmvc</artifactId>
+				<version>${swagger.version}</version>
+			</dependency>
 
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-mapper-asl</artifactId>
+				<version>${jackson-asl.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-core-asl</artifactId>
+				<version>${jackson-asl.version}</version>
+			</dependency>
+			<!-- swagger dependency end -->
+			<!-- 阿里的json工具包 -->
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>${fastjson.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
-	<modules>
-		<module>wms-common-parent</module>
-		<module>wms-service-parent</module>
-		<module>wms-web-parent</module>
-		<module>wms-facade-parent</module>
-	</modules>
 
 	<build>
+		<!-- 指定 src/main/resources下xml,properties文件及文件夹为资源文件 -->
+		<resources>
+			<resource>
+				<!-- 复制至目标目录 -->
+				<targetPath>${project.build.directory}/classes</targetPath>
+				<!-- 原目录 -->
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>*.xml</include>
+					<include>*.properties</include>
+
+					<include>**/*.xml</include>
+					<include>**/*.properties</include>
+				</includes>
+				<!-- ${key}会被替换掉为真正的值 -->
+				<filtering>true</filtering>
+			</resource>
+
+			<!-- service 专用,但对其他工程无害, 另外如果在fcs-service-parent 配置resources,则孙级工程,不会继承fcs-parent的resources配置 -->
+			<!-- 因dubbo启动类会从META-INF下读取spring-context.xml文件,所以 -->
+			<!-- 把src/main/resources/spring下的spring-context.xml 文件复制到target/classes/META-INF/spring下 -->
+			<resource>
+				<targetPath>${project.build.directory}/classes/META-INF/spring</targetPath>
+				<directory>src/main/resources/spring</directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>spring-context.xml</include>
+				</includes>
+			</resource>
+		</resources>
+
 		<pluginManagement>
 			<plugins>
+				<!-- 解决Maven插件生命周期内引起的冲突 -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-dependency-plugin</artifactId>
+										<versionRange>[2.0,)</versionRange>
+										<goals>
+											<goal>copy-dependencies</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
 
+				<!--编译插件 指定在jdk1.8环境下编译 -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -467,27 +630,55 @@
 					</dependencies>
 				</plugin>
 
+				<!-- 复制依赖包 -->
 				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-deploy-plugin</artifactId>
-					<version>2.4</version>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>2.6</version>
+					<executions>
+						<execution>
+							<id>copy-dependencies</id>
+							<phase>prepare-package</phase>
+							<goals>
+								<goal>copy-dependencies</goal>
+							</goals>
+						</execution>
+					</executions>
 					<configuration>
-						<skip>true</skip>
+						<includeTypes>jar</includeTypes>
+						<overWriteSnapshots>true</overWriteSnapshots>
+						<type>jar</type>
+						<outputDirectory>${project.build.directory}/lib</outputDirectory>
 					</configuration>
 				</plugin>
 
+				<!--打包可执行jar -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>2.4</version>
+					<version>3.0.2</version>
 					<configuration>
-						<excludes>
-							<exclude>**/*.properties</exclude>
-						</excludes>
+						<!-- 打包class目录 -->
+						<classesDirectory>target/classes/</classesDirectory>
+						<archive>
+							<manifest>
+								<!--启动类是 com.alibaba.dubbo.container.Main 非dubbo工程,请重写此配置 -->
+								<mainClass>com.alibaba.dubbo.container.Main</mainClass>
+								<!-- 文件名不记录版本号 -->
+								<useUniqueVersions>false</useUniqueVersions>
+								<addClasspath>true</addClasspath>
+								<!-- 配置manifest文件，加入lib包的jar依赖 -->
+								<classpathPrefix>lib/</classpathPrefix>
+							</manifest>
+							<manifestEntries>
+								<Class-Path>.</Class-Path>
+							</manifestEntries>
+						</archive>
 					</configuration>
 				</plugin>
 
+				<!--打包插件 详见assembly.xml -->
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
 					<configuration>
 						<descriptor>src/main/assembly/assembly.xml</descriptor>
@@ -497,58 +688,73 @@
 							<id>make-assembly</id>
 							<phase>package</phase>
 							<goals>
-								<goal>single </goal>
+								<goal>single</goal>
 							</goals>
 						</execution>
 					</executions>
 				</plugin>
 
+				<!-- 发布插件 -->
 				<plugin>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>2.6</version>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>2.4</version>
 					<configuration>
-						<encoding>UTF-8</encoding>
+						<skip>true</skip>
 					</configuration>
 				</plugin>
 
+				<!-- 源码插件 -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>2.6</version>
+					<configuration>
+						<!-- 解决资源文件的编码问题 -->
+						<encoding>UTF-8</encoding>
+					</configuration>
+				</plugin>
+				<!-- 打包source文件为jar文件 -->
+				<plugin>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>2.6</version>
+					<configuration>
+						<attach>true</attach>
+						<encoding>UTF-8</encoding>
+					</configuration>
+					<executions>
+						<execution>
+							<phase>compile</phase>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+
+				<!--单元测试插件 用来在maven构建生命周期的test phase执行一个应用的单元测试 -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.10</version>
 					<configuration>
+						<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
+						<additionalClasspathElements>
+							<additionalClasspathElement>
+								${basedir}/target/test-classes
+							</additionalClasspathElement>
+						</additionalClasspathElements>
+						<includes>
+							<include>**/*Test.java</include>
+						</includes>
+						<excludes>
+							<exclude>**/TestConstants.java</exclude>
+						</excludes>
+						<forkMode>pertest</forkMode>
 						<skip>true</skip>
 						<testFailureIgnore>true</testFailureIgnore>
 					</configuration>
 				</plugin>
-
-				<!-- 打包main/java下的xml,properties文件 -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>2.5</version>
-					<executions>
-						<execution>
-							<id>copy-resources</id>
-							<phase>process-sources</phase>
-							<goals>
-								<goal>copy-resources</goal>
-							</goals>
-							<configuration>
-								<outputDirectory>${basedir}/target/classes</outputDirectory>
-								<resources>
-									<resource>
-										<directory>${basedir}/src/main/java</directory>
-										<includes>
-											<include>**/*.xml</include>
-											<include>**/*.properties</include>
-										</includes>
-									</resource>
-								</resources>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
-
 			</plugins>
 		</pluginManagement>
 	</build>
